some content and images modified

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is my1Cent</a></li>
-							<li><a href="generic.html">Learning Resources</a></li>
-							<li><a href="elements.html">Contributions and Comments</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="generic.html">About</a></li>
+							
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -54,14 +54,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">December 1, 2018</span>
+									<span class="date">I will use my voice</span>
 									<h2><a href="#">And What are you<br />
 									doing to make the world a better place?</a></h2>
 									<p>I believe when we help one another I believe in one way or the other, we are<br />
 									making the world a better place. This can be with your smile, giving directions, sharing your experience and the list goes on...<br />
 									in one way or the other, you are contributing your 1 cent.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/1cent.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/3.jpg" alt="" /></a>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/Ip3bC9oGHd8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Read More</a></li>
 								</ul>
@@ -71,9 +72,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">Learn from Scrum</span>
+										<h2><a href="#">History Repeat itself<br />
+										unless you change it</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/1cent.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -83,9 +84,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">A unique you</span>
+										<h2><a href="#">How to<br />
+										boost your self confidence</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/1cent.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -95,11 +96,11 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">I wish you knew</span>
+										<h2><a href="#">Are you stranded?<br />
+										Move it!</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/1cent.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/14.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
@@ -107,7 +108,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
+										<span class="date">Catch them young</span>
 										<h2><a href="#">Tempus sed<br />
 										nulla imperdiet</a></h2>
 									</header>
@@ -119,9 +120,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">Start Early</span>
+										<h2><a href="#">Africa<br />
+										Arise</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/1cent.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -131,11 +132,11 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">December 1, 2018</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">On the 3rd of December</span>
+										<h2><a href="#">Who would <br />
+										Have thought</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/1cent.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/4.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
